fixes #4013 - add back in gif for inputbox gradient in ie6 - validation is being overly polite at the moment, so can't see if invalid input breaks the "non-transparent gif" being used to make this work. when validation modifies background color, it will have to set background-image:none in ie6, or else you'll see the white background color in the image.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10686 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -206,6 +206,7 @@
 	*/
 	font-size: inherit;
 	background:#fff url("images/validationInputBg.png") repeat-x top left;
+	#background:#fff url('images/validationInputBg.gif') repeat-x top left; 
 	border:1px solid #9b9b9b;
 	line-height: normal;
 }
@@ -1333,9 +1334,7 @@
 
 .dj_ie6 .tundra .dijitInputField
 {
-	background:transparent;
-	/* FIXME: un-comment when a pretty version of .gif is made */
-	/* background-image: url("images/dojoTundraGradientBg.gif"); */
+	background: url("images/validationInputBg.gif") repeat-x top left; 
 }
 
 
